# Parallel-Programing

./: .gitignore  README.md
Task0/: .gitignore  CMakeLists.txt  Lab0_21307289_刘森元.md  MatMul  MatMul.cpp  MatMul.py  MatMul_CompileOptimized  MatMul_Loop  MatMul_Loop.cpp  MatMul_LoopExtended  MatMul_LoopExtended.cpp  MatMul_MKL  MatMul_MKL.cpp
Task0/src/: MatMul.py  MatMul_LoopExtended.cpp  MatMul_MKL.cpp
Task1/: .gitignore  CMakeLists.txt  CUDAMatMul  CUDAMatMul.cu  Lab1_21307289_刘森元.md  MPIMatMul  MPIMatMul.cpp  README.md
Task1/src/: CUDAMatMul.cu  MPIMatMul.cpp
Task10/: 并行程序设计_21307289_刘森元.md
Task10/src/: CUDAMatMul.cu
Task11/: .gitignore  11-CUDA卷积计算.docx  CMakeLists.txt  gen.sh  并行程序设计_21307289_刘森元.md
Task11/include/: img2col.hpp  utils.hpp
Task11/src/: Convolution.cpp  ConvolutionCuDNN.cpp  KernelGenerate.cpp  img2col.cu  utils.cpp
Task2/: .gitignore  CMakeLists.txt  Lab2_21307289_刘森元.md  MPIMatMul  MPIMatMul.cpp
Task2/src/: MPIMatMul.cpp
Task3/: CMakeLists.txt  Lab3_21307289_刘森元.md  PthreadMatMul  PthreadMatMul.cpp  PthreadVecSum  PthreadVecSum.cpp  PythonMatMul.py  PythonVecSum.py
Task3/src/: PthreadMatMul.cpp  PthreadVecSum.cpp  PythonVecSum.py
Task4/: .gitignore  CMakeLists.txt  Lab4_21307289_刘森元.md  PthreadEquation  PthreadEquation.cpp  PthreadMonteCarlo  PthreadMonteCarlo.cpp
Task5/: .gitignore  CMakeLists.txt  Lab5_21307289_刘森元.md  OpenMPMatMul  OpenMPMatMul.cpp  pics.py
Task5/Testing/Temporary/: CTestCostData.txt
Task5/src/: OpenMPMatMul.cpp  PythonMatMul.py  pics.py
Task6/: .gitignore  CMakeLists.txt  并行程序设计_21307289_刘森元.md
Task6/include/: parallel_for.h
Task6/res/: e32556dc-2bab-4559-8816-1c6ea6ff7197
Task6/src/: HeatedPlate.cpp  HeatedPlateOpenMP.cpp  MatMul.cpp  PthreadsFor.cpp  PythonMatMul.py  PythonVecAdd.py  VecAdd.cpp  parallel_for.cpp
Task7/: .gitignore  CMakeLists.txt  a.out  fft  fft.cpp  fft_mpi.cpp  fft_serial  temp  temp.cpp  并行程序设计_21307289_刘森元.md
Task7/src/: fft_mpi.cpp  fft_serial.cpp
Task8/: .gitignore  CMakeLists.txt  并行程序设计_21307289_刘森元.md
Task8/include/: csv.h
Task8/src/: ShortestPath.cpp
Task9/: .gitignore  CMakeLists.txt  并行程序设计_21307289_刘森元.md
Task9/src/: CUDAHelloWorld.cu  CUDAMatTp.cu
Theory/: 并行程序设计与算法 第一次作业.md  并行程序设计与算法 第三次作业  并行程序设计与算法 第二次作业.md  并行程序设计与算法 第四次作业.md
